correct z-index

--- a/src/components/EditCardModal/EditCardModal.module.css
+++ b/src/components/EditCardModal/EditCardModal.module.css
@@ -5,6 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 999;
 }
 
 .modal {
